# vertex-pipelines-deployer

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  catalog-info.yaml  example.env  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yaml
.github/workflows/: cd_example.yaml  check_pipelines.yaml  ci.yaml  deploy_docs.yaml  pr_agent.yaml  release-drafter.yaml  release.yaml
.skaff/: skaff.yaml
CLI_REFERENCE/: index.html
advanced/advanced_user_guide/: index.html
advanced/configuration/: index.html
advanced_user_guide/: index.html
api/pipeline_checks/: index.html
api/utils/: index.html
api/vertex_deployer/: index.html
changelog/: index.html
configuration/: index.html
contributing/: index.html
deployer/: cli.py  configuration.py  constants.py  deployer.py  exceptions.py  init_deployer.py  models.py  new_file.py  pipeline_checks.py  pipeline_deployer.py  pipelines_deployer.py  settings.py  utils.py
deployer/_templates/: Dockerfile.jinja  build_base_image.sh.jinja  deployer-requirements.txt  deployer-requirements.txt.jinja  deployer.env  deployer.env.jinja  pipeline_minimal.py.jinja  python_config.py  requirements-vertex.txt.jinja
deployer/_templates/components/: dummy_component.py  dummy_component.py.jinja
deployer/_templates/configs/: config.py  config.toml  config.yaml  python_config.py.jinja
deployer/_templates/deployment/: Dockerfile.jinja  cloudbuild_local.yaml.jinja
deployer/_templates/pipelines/: pipeline_minimal.py.jinja
deployer/settings/: __init__.py  source_file.py  validation.py
deployer/templates/: build_base_image.jinja
deployer/utils/: config.py  console.py  exceptions.py  init.py  initiation.py  logging.py  models.py  utils.py
docs/: CLI_REFERENCE.md  advanced_user_guide.md  configuration.md  example.md  folder_structure.md  index.md  install.md  setup.md  usage.md  why.md
docs/advanced/: configuration.md
docs/api/: pipeline_checks.md  utils.md  vertex_deployer.md
docs/stylesheets/: skaff.css
example/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.env  index.html  pyproject.toml  requirements.txt
example/.github/workflows/: check_pipelines.yaml  deploy_pipelines.yaml
example/vertex/components/: dummy.py
example/vertex/configs/broken_pipeline/: config_test.json
example/vertex/configs/dummy_pipeline/: config.py  config.toml  dynamic_config.py
example/vertex/deployment/: .dockerignore  Dockerfile  cloudbuild_cd.yaml  cloudbuild_local.yaml
example/vertex/pipelines/: broken_pipeline.py  dummy_pipeline.py
folder_structure/: index.html
search/: search_index.json
setup/: index.html
stylesheets/: extra.css
templates/: .release_notes.md.j2  CHANGELOG.md.j2
tests/: conftest.py
tests/integration_tests/: test_configuration.py  test_init.py
tests/samples/: registry_client_response.pkl
tests/unit_tests/: test_config.py  test_console.py  test_init_deployer.py  test_models.py  test_pipeline_checks.py  test_pipeline_deployer.py  test_settings.py  test_utils.py
tests/unit_tests/input_files/: template1.txt.jinja  template3.env.jinja
tests/unit_tests/input_files/folder/: template2.yaml.jinja
tutorial/tutorial_to_replicate/: Readme.md  pyproject.toml  requirements-vertex.txt  requirements.txt
tutorial/tutorial_to_replicate/vertex/components/: load_data.py  save_data.py  transform_data.py
tutorial/tutorial_to_replicate/vertex/configs/my_first_pipeline/: test.py
tutorial/tutorial_to_replicate/vertex/deployment/: Dockerfile  build_base_image.sh
tutorial/tutorial_to_replicate/vertex/lib/: bigquery.py  transform_data.py
tutorial/tutorial_to_replicate/vertex/pipelines/: my_first_pipeline.py
usage/: index.html
vertex/configs/dummy_pipeline/: config_test.json
vertex/lib/: hello_world.py
vertex/pipelines/: broken_pipeline.py  dummy_pipeline.py
