[tool.poetry]
name = "vertex-deployer"
version = "0.2.1"
description = ""
authors = ["julesbertrand <julesbertrand13@gmail.com>"]
readme = "README.md"
packages = [{include = "deployer"}]

[tool.poetry.scripts]
vertex-deployer = "deployer.cli:app"

[tool.poetry.dependencies]
python = ">=3.8, <3.11.0"
kfp = ">=2.0.1, <2.1.0"
google-cloud-aiplatform = "^1.26.1"
requests = "^2.31.0"
typer = "^0.9.0"
rich = "^13.5.3"
loguru = "^0.7.2"
pydantic-settings = "^2.0.3"
pydantic = "^2.3.0"
pyinstrument = { version = "^4.5.3", optional = true }
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
ipykernel = "6.9.1"
nbstripout = "^0.6.1"
ruff = "^0.0.289"
pytest-cov = "^4.1.0"

[tool.poetry.extras]
profiling = ["pyinstrument"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
python_version = "3.10"
line-length = 99

[tool.isort]
profile = "black"
known_first_party = ["vertex", "tests"]

[tool.ruff]
ignore = [
    "D100",
    "D205",
    "D415",
]
line-length = 99
select = ["B", "C", "D", "E", "F", "W"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"*cli.py" = ["D", "B008"]
"*__init__.py" = [
    "F401",
    "D100",
    "D101",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]
"tests/*" = ["D"]

[tool.semantic_release]
version_variables = ["deployer/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
commit_message = "chore(release): {version}\n\nAutomatically generated by semantic-release"
tag_format = "{version}"

[tool.semantic_release.changelog]
exclude_commit_patterns = ['''^chore\(release\).*''']
